@@ -1,6 +1,5 @@
 package org.powermock.examples;
 
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.powermock.api.easymock.PowerMock.replayAll;
 import static org.powermock.api.easymock.PowerMock.verifyAll;
@@ -17,25 +16,22 @@ import org.powermock.modules.junit4.PowerMockRunner;
 import org.powermock.reflect.Whitebox;
 
 /**
- * Unit tests that assert that the {@link Slf4jMockPolicy} works.
+ * Unit tests that assert that the {@link JclMockPolicy} works.
  */
 @RunWith(PowerMockRunner.class)
 @MockPolicy(JclMockPolicy.class)
 public class JclUserTest {
 
-    @Test
-    public void assertJclMockPolicyWorks() throws Exception {
-        final JclUser tested = new JclUser();
+	@Test
+	public void assertJclMockPolicyWorks() throws Exception {
+		final JclUser tested = new JclUser();
 
-        replayAll();
+		assertTrue(Proxy.isProxyClass(Whitebox.getInternalState(JclUser.class, Log.class).getClass()));
 
-        tested.getMessage();
-        /*
-         * Should return null since getClass() is mocked as a nice mock (because
-         * the logger is mocked)
-         */
-        assertNull(Whitebox.getInternalState(JclUser.class, Log.class).getClass());
+		replayAll();
 
-        verifyAll();
-    }
+		tested.getMessage();
+
+		verifyAll();
+	}
 }
